# adplug

./: .cvsignore  .editorconfig  .gitignore  .travis.yml  AUTHORS  BUGS  CHANGES  CMakeLists.txt  CMakePresets.json  COPYING  CREDITS  ChangeLog  INSTALL  INSTALL.dos  INSTALL.win32  Makefile.am  Makefile.bt  Makefile.wat  NEWS  PLAYER_SDK  README  README.dos  RELEASE  TODO  adlibemu.c  adlibemu.h  adplug.cpp  adplug.dsp  adplug.h  adplug.pc.in  adplug.qpg  adplug.spec  adplug_mdk.spec  appveyor.yml  autogen.sh  configure.ac  configure.in  diskopl.cpp  diskopl.h  emuopl.cpp  (+11 more)
.github/workflows/: build.yml  cmake-build.yml  codeql.yml  coverity-scan.yml  msvc-scan.yml
adplugdb/: .cvsignore  Makefile.am  Makefile.bt  adplugdb.cpp  adplugdb.dsp  getopt.c  getopt.h  mygetopt.h
cmake/: reinking-packaging.cmake  shared-static-config.cmake.in
contrib/: README
contrib/MSVC6/: .cvsignore  adplug.dsp  playertest.dsp  readme.txt  vc6inst.bat
contrib/Watcom/: adplugdb.bt  install.txt  readme.txt  src.bt  test.bt
contrib/vs2015/: README  adplug.autopkg.template  vs2015.sln
contrib/vs2015/adplug/: adplug.vcxproj  packages.config
contrib/vs2015/crctest/: crctest.vcxproj
contrib/vs2015/emutest/: emutest.vcxproj
contrib/vs2015/playertest/: packages.config  playertest.vcxproj
doc/: .cvsignore  CMakeLists.txt  Hacking.ms  Hacking.txt  Makefile.am  Player-Development-mini-HOWTO.txt  Player-Development.ms  Player-Development.txt  Protracker.ms  Protracker.txt  adplugdb.1  adplugdb.1.in  fdl.texi  groff-it  libadplug.texi  version.texi.in
frontends/dos/: adplay.cpp  colors.ini  makefile  readme.txt
frontends/dos/timer/: dpmi.cpp  dpmi.h  imsrtns.h  irq.cpp  irq.h  makefile  pindos.cpp  pindos.h  readme.txt  timer.cpp  timer.h
frontends/dos/window/: makefile  readme.txt  txtgfx.c  txtgfx.h  window.cpp  window.h
frontends/winamp/: In2.h  debug.h  frontend.h  in_adlib.cpp  in_adlib.dsp  in_adlib.rc  in_adlib.txt  resource.h
packaging/: CMakeLists.txt
players/: Makefile.wat  a2m.cpp  a2m.h  amd.cpp  amd.h  bam.cpp  bam.h  d00.cpp  d00.h  debug.c  dfm.cpp  dfm.h  fmc.cpp  hsc.cpp  hsc.h  hsp.cpp  hsp.h  imf.cpp  imf.h  imfcrc.h  ksm.cpp  ksm.h  lds.cpp  mad.cpp  makefile  makefile.wat  mid.cpp  mid.h  mididata.h  mkj.cpp  mkj.h  mtk.cpp  mtk.h  player.h  protrack.cpp  protrack.h  rad.cpp  rad.h  raw.cpp  raw.h  (+12 more)
src/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.bt  Makefile.wat  a2m-v2.cpp  a2m-v2.h  a2m.cpp  a2m.h  adl.cpp  adl.h  adlib.cpp  adlib.h  adlibemu.c  adlibemu.h  adplug.cpp  adplug.dsp  adplug.h  adtrack.cpp  adtrack.h  amd.cpp  amd.h  analopl.cpp  analopl.h  bam.cpp  bam.h  bmf.cpp  bmf.h  cff.cpp  cff.h  cmf.cpp  cmf.h  cmfmcsop.cpp  cmfmcsop.h  coktel.cpp  coktel.h  composer.cpp  composer.h  d00.cpp  d00.h  (+137 more)
test/: .cvsignore  03B.RIX  03B.ref  2.ref  2001.MKJ.orig.raw  2001.MKJ.ref  ADAGIO.DFM.orig.raw  ADAGIO.DFM.ref  ALLOYRUN.RAD.orig.raw  ALLOYRUN.RAD.ref  ARAB.BAM.orig  ARAB.BAM.orig.raw  ARRAKIS.SDB  ARRAKIS.ref  BEGIN.KSM.orig  BEGIN.KSM.orig.raw  BOOTUP.M.orig  BOOTUP.M.orig.raw  BeyondSN.ref  CHILD1.XSM.orig  CHILD1.XSM.orig.raw  CHILD1.ref  CMakeLists.txt  DBLEFREE.M  DTM-TRK1.DTM.orig.raw  DTM-TRK1.DTM.ref  DUNE19.ADL  DUNE19.ref  EOBSOUND.ADL  EOBSOUND.ref  Flying.mdi  Flying.ref  GORBI2.ref  HIP_D.ROL.ref  LOREINTR.ref  MARIO.A2M.orig.raw  MARIO.A2M.ref  MORNING.ref  MainBGM5.ref  Makefile.am  (+168 more)
test/fuzzing/: i-100_02.xad  i-100_04.dro  i-100_06.raw  i-100_07.dro  i-100_08.dro  i-100_09.adlib  i-100_10.mkj  i-100_11.mkj  i-100_12.cmf  i-100_13.cmf  i-101_1.d00  i-102_001.dfm  i-102_002.dfm  i-102_003.dfm  i-102_004.dfm  i-102_005.dfm  i-102_007.dfm  i-102_010.dfm  i-102_011.dfm  i-102_012.dfm  i-102_013.dfm  i-102_014.dfm  i-102_015.dfm  i-102_017.dfm  i-102_018.dfm  i-102_020.dfm  i-102_021.dfm  i-102_024.dfm  i-102_025.dfm  i-102_026.dfm  i-102_027.dfm  i-102_029.dfm  i-102_030.dfm  i-102_031.dfm  i-102_032.dfm  i-102_033.dfm  i-102_034.dfm  i-102_035.dfm  i-102_036.dfm  i-102_037.dfm  (+275 more)
test/testmus/: 2.CMF  AB_JULIA.A2T  ACTION.PIS  AKMTEC.MTR  BeyondSN.vgm  CHARGEN.CMF  CHIP.MTR  DEMO.XMI  DEMO4.JBM  GALWAY.SOP  GENORI.LD0  GORBI2.SQX  GRABBAG.MID  LOREINTR.ADL  MORNING.HSQ  MainBGM5.vgm  NEWPAGA.HA2  NEWSAN.HSQ  RRThiel.vgz  Restart.vgz  SAVAGE.HSQ  SNDTRACK.CMF  Sonic.vgz  TEST16.MID  TheAlibi.d00  VACANCE.WM  WORMINTR.AGD  YsBattle.vgm  bmf1_1.bmf  canonind.rad  doofus.dro  dro_v2.dro  ending.sop  fank5.a2m  fm-troni.a2m  go-_-go.bnk  go-_-go.ims  lines1.mus  lines1.snd  logical.plx  (+5 more)
test/testref/: 2.ref  AB_JULIA.ref  ACTION.ref  AKMTEC.ref  ALLOYRUN.ref  CHARGEN.ref  CHIP.ref  DEMO.ref  DEMO4.ref  EOBSOUND.ref  Flying.ref  GALWAY.ref  GENORI.ref  GORBI2.ref  GRABBAG.ref  HIP_D.ref  LOREINTR.ref  MainBGM5.ref  NEWPAGA.ref  NEWSAN.ref  RI051.ref  RIK6.ref  RRThiel.ref  Restart.ref  SAVAGE.ref  SNDTRACK.ref  Sonic.ref  TEST16.ref  TheAlibi.ref  VACANCE.ref  WORMINTR.ref  YsBattle.ref  bmf1_1.ref  canonind.ref  crusader.ref  dro_v2.ref  dystopia.ref  ending.ref  fm-troni.ref  go-_-go.ref  (+10 more)
